--- a/WandKalender/css/style.css
+++ b/WandKalender/css/style.css
@@ -25,66 +25,44 @@
 
 :root
 {
-    --hlcolor:              #779;
-    --fgcolor:              #CCC;
-    --bgcolor:              #181819;
-    --fmcolor:              #779;
-    --radius:               0.3em;
-    --borderwidth:          0.1em;
-
-    --normalfontsize:       12pt;
-    --smallfontsize:         9pt;
-
     --color-red:            #5E1F1F;
     --color-yellow:         #5E5E1F;
     --color-green:          #1F5E29;
     --color-blue:           #1F1F5E;
     --color-white:          #F0F0F0;
+    --color-black:          #080808;
     --color-gold:           #A8A623;
     --color-gray:           #323234;
+    --color-lightgray:      #C2C2C4;
     --color-brightred:      #CF4545;
     --color-brightgreen:    #2C832C;
     --color-brightblue:     #4545CF;
     --color-brightyellow:   #ADAD3F;
+
+    --radius:               0.3em;
+    --borderwidth:          0.2em;
+    --bordercolor:          var(--color-black);
+    --weekendcolor:         var(--color-brightred);
+    --weekcolor:            var(--color-lightgray);
+    --entrycolor:           var(--color-brightblue);
 }
 
 
 
-.fgcolor
+body
 {
-    color:              var(--fgcolor);
-}
-.hlcolor
-{
-    color:              var(--hlcolor);
-}
-.bgcolor
-{
-    background-color:   var(--bgcolor);
-}
-.fmcolor
-{
-    border-color:       var(--fmcolor);
+    color:              var(--color-black);
+    background-color:   var(--color-white);
+
+    font-family:        SourceSansPro, DejaVuSans;
+    font-size:          16pt;
+    font-weight:        bold;
+    letter-spacing:     0.03rem;
+
+    background-image:   url(../img/Noise10.png);
+    background-repeat:  repeat;
 }
 
-
-/***********************/
-/* default font  style */
-/***********************/
-
-.smallfont
-{
-    font-size:          var(--smallfontsize);
-}
-.tinyfont
-{
-    font-family:        DejaVuSans;
-    font-size:          6px;
-}
-.seriffont
-{
-    font-family:        SourceSerifPro;
-}
 
 
 /*************************/
