Show name of month

--- a/WandKalender/css/Calendar.css
+++ b/WandKalender/css/Calendar.css
@@ -33,6 +33,10 @@ table.Calendar
     margin-left:        1.5ch;
 }
 
+.Calendar td .monthname
+{
+    text-align:         center;
+}
 .Calendar tr.weekend
 {
     background-color:   var(--weekendcolor);
