--- a/WandKalender/css/style.css
+++ b/WandKalender/css/style.css
@@ -37,7 +37,7 @@
     --color-brightred:      #FFAAAA;
     --color-brightgreen:    #2C832C;
     --color-brightblue:     #AAAAFF;
-    --color-brightyellow:   #ADAD3F;
+    --color-brightyellow:   #FFFFAA;
 
     --radius:               0.3em;
     --borderwidth:          0.2em;
