--- a/WandKalender2/css/Calendar.css
+++ b/WandKalender2/css/Calendar.css
@@ -42,7 +42,10 @@ tr.weekend, tr.holiday
     background-color:   var(--weekendcolor);
 }
 
+/*
 tr.today td:nth-child(n+2)
+*/
+tr.today
 {
     background-color:   var(--todaycolor);
 }
