--- a/WandKalender2/css/style.css
+++ b/WandKalender2/css/style.css
@@ -34,8 +34,8 @@
     --color-gold:           #A8A623;
     --color-darkgray:       #302020;
     --color-gray:           #323234;
-    --color-lightgray:      #C2C2C4;
-    --color-brightred:      #FFAAAA;
+    --color-lightgray:      #E2E2E4;
+    --color-brightred:      #FFDDDD;
     --color-brightgreen:    #AAFFAA;
     --color-brightblue:     #AAAAFF;
     --color-brightyellow:   #FFFFAA;
@@ -46,7 +46,7 @@
     --weekendcolor:         var(--color-brightred);
     --weekcolor:            var(--color-lightgray);
     --todaycolor:           var(--color-brightgreen);
-    --headlinecolor:        var(--color-brightyellow);
+    --headlinecolor:        var(--color-lightgray);
     --entrybackground:      #AAAAFF80;
     --entryframecolor:      #AAAAFF;
 }
