Clock with date and time added

--- a/WandKalender2/css/style.css
+++ b/WandKalender2/css/style.css
@@ -47,6 +47,7 @@
     --weekcolor:            var(--color-lightgray);
     --todaycolor:           var(--color-brightgreen);
     --headlinecolor:        var(--color-lightgray);
+    --clockbackground:      var(--color-lightgray);
     --entrybackground:      #AAAAFF80;
     --entryframecolor:      #AAAAFF;
 }
