--- a/WandKalender2/css/style.css
+++ b/WandKalender2/css/style.css
@@ -46,7 +46,8 @@
     --weekendcolor:         var(--color-brightred);
     --weekcolor:            var(--color-lightgray);
     --todaycolor:           var(--color-brightgreen);
-    --headlinecolor:        var(--color-lightgray);
+    --headlinefgcolor:      var(--color-lightgray);
+    --headlinebgcolor:      var(--color-darkgray);
     --clockbackground:      var(--color-lightgray);
     --entrybackground:      #AAAAFF80;
     --entryframecolor:      #AAAAFF;
